# hormodular

./: CMakeLists.txt  ConfigParser_8h_source.html  Connector_8hpp_source.html  FindTinyXML2.cmake  GaitTable_8h_source.html  Hormone_8hpp_source.html  ModularRobotEvalOp_8h_source.html  ModularRobotInterfaceFactory_8hpp_source.html  ModularRobotInterface_8hpp_source.html  ModularRobot_8h_source.html  Module_8hpp_source.html  Orientation_8hpp_source.html  Oscillator_8h_source.html  README.md  SerialModularRobotInterface_8hpp_source.html  SimulatedModularRobotInterface_8hpp_source.html  SimulationOpenRAVE_8hpp_source.html  SinusoidalOscillator_8h_source.html  Utils_8hpp_source.html  annotated.html  classModularRobotEvalOp-members.html  classModularRobotEvalOp.html  classModularRobotEvalOp__coll__graph.md5  classModularRobotEvalOp_a0ceff4f78af079f8a07003bf7f3dc414.html  classModularRobotEvalOp_a2aced54c90ee887f426f32bdc2f49773.html  classModularRobotEvalOp_a2be582d7726d17be190f797122054645.html  classModularRobotEvalOp_a65f80e340428bc12bbe8531b3903e5c4.html  classModularRobotEvalOp_a6f1f617202e961f779507c87d18cf419.html  classModularRobotEvalOp_a72aa50cee23b88c6330f879daffbf26f.html  classModularRobotEvalOp_a7ed3d27fae0e583b90e6fcbf649e136c.html  classModularRobotEvalOp_a84a06d2e839d9c8af1ae9df6c93e972c.html  classModularRobotEvalOp_a85501b790e613cf6a440ffa0d49d0804.html  classModularRobotEvalOp_a85501b790e613cf6a440ffa0d49d0804_a85501b790e613cf6a440ffa0d49d0804_cgraph.map  classModularRobotEvalOp_a85501b790e613cf6a440ffa0d49d0804_a85501b790e613cf6a440ffa0d49d0804_cgraph.md5  classModularRobotEvalOp_a90ef3cd7c00d51d0975da16806bf9457.html  classModularRobotEvalOp_a92edc07d1e581bd2a83bac2a4890b792.html  classModularRobotEvalOp_aa94212ee7b4b0bde1c92010e5f76d3c6.html  classModularRobotEvalOp_aa94212ee7b4b0bde1c92010e5f76d3c6_aa94212ee7b4b0bde1c92010e5f76d3c6_cgraph.map  classModularRobotEvalOp_aa94212ee7b4b0bde1c92010e5f76d3c6_aa94212ee7b4b0bde1c92010e5f76d3c6_cgraph.md5  classModularRobotEvalOp_ab5f60d20ea94b6df47b17d0771c969ae.html  (+342 more)
src/: CMakeLists.txt  Doxyfile  ModularRobotEvalOp.cpp  ModularRobotEvalOp.h  evaluate_gaits.cpp  evolve_gaits.cpp  parameters.xml
src/Arduino/Read_Servo_POT/: Read_Servo_POT.pde
src/Arduino/Read_Servo_POT_WithPhase/: Read_Servo_POT_WithPhase.pde
src/Arduino/Sweep_Servo_Predict_Individual/: Sweep_Servo_Predict_Individual.pde
src/Arduino/servo_controller_charArray_V5/: servo_controller_charArray_V5.pde
src/Arduino/servo_controller_charArray_V7/: servo_controller_charArray_V7.ino
src/Controller/: CMakeLists.txt  Controller.cpp  Controller.h  GaitTable.cpp  GaitTable.h  Oscillator.cpp  Oscillator.h  SinusoidalOscillator.cpp  SinusoidalOscillator.h
src/Controller/Testing/: CMakeLists.txt  testController.cpp  testGaitTable.cpp  testSinusoidalOscillator.cpp
src/Evaluation/: CMakeLists.txt  EvaluateController.cpp  NeuralModelEvaluator.cpp
src/Evolution/: CMakeLists.txt  Evolution.cpp
src/FileHandler/: FileHandler.cpp  FileHandler.h
src/Flood/MultilayerPerceptron/: MultilayerPerceptron.cpp
src/Flood/Perceptron/: Perceptron.cpp
src/Flood/TrainingAlgorithm/: EvolutionaryAlgorithm.cpp
src/GraphFile/: GraphFile.cpp  GraphFile.h
src/ModularRobot/: CMakeLists.txt  ModularRobot.cpp  ModularRobot.h  SerialModularRobot.cpp  SimulatedModularRobot.cpp  SimulatedModularRobot.h  SimulationOpenRAVE.cpp  SimulationOpenRAVE.h
src/ModularRobot/Testing/: CMakeLists.txt  testModularRobot.cpp  testSerialModularRobot.cpp
src/Module/: CMakeLists.txt  Module.cpp  Module.h  SerialModule.h  Servo.cpp  Servo.h  SimulatedModule.cpp  SimulatedModule.h  SimulatedServo.cpp  SimulatedServo.h
src/Module/Testing/: CMakeLists.txt  testModule.cpp
src/Morphmotion/Evaluation/: EvaluateController.cpp
src/Morphmotion/Evolution/: Evolution.h  EvolveController.cpp
src/Morphmotion/SerialCommunication/: SerialCommunication.h
src/Morphmotion/SimulationOpenRave/: SimulationOpenRave.h
src/Morphmotion/VisualTracker/: VisualTracker.cpp  VisualTrackerApplication.cpp  color_utils.h  comp_labeller_interface.h  debug.h  disjoint_sets2.h  error.h
src/Morphmotion/Y1ModularRobot/: Y1ModularRobot.cpp
src/Robot/: Robot.cpp  Robot.h
src/SerialCommunication/: SerialCommunication.c  SerialCommunicationEvaluator.cpp
src/SerialCommunication/XBEE_Config/: README  xbeeterm.py
src/SimulationOpenRave/: SimulationOpenRave.cpp  SimulationOpenRave.h
src/Thin_client/: CMakeLists.txt  Thin_client.pde  test_sin.cpp  test_sin.py
src/VisualTracker/: VisualTracker.h  comp_labeller_interface.cpp  disjoint_sets2.cpp  layer_utils.h  point2.h  point3.h
src/VisualTracker/camera_utils/: camera_utils.cpp  camera_utils.h
src/Y1ModularRobot/: Y1ModularRobot.h
src/apps/: CMakeLists.txt  ModularRobotEvalOp.cpp  ModularRobotEvalOp.h  evaluate_controller_sim.cpp  evaluate_gaits_serial.cpp  evaluate_gaits_sim.cpp  modular_robot_moves.cpp
src/libs/: CMakeLists.txt
src/libs/ConfigParser/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h
src/libs/Controller/: CMakeLists.txt  Controller.cpp  Controller.h  GaitTable.cpp  GaitTable.h  Oscillator.cpp  Oscillator.h  SinusoidalOscillator.cpp  SinusoidalOscillator.h
src/libs/GaitTable/: CMakeLists.txt  GaitTable.cpp  GaitTable.h
src/libs/Hormone/: CMakeLists.txt  Hormone.cpp  Hormone.hpp
src/libs/ModularRobot/: CMakeLists.txt  ModularRobot.cpp  ModularRobot.h  SerialModularRobot.cpp  SerialModularRobot.h  SimulatedModularRobot.cpp  SimulatedModularRobot.h  SimulatedModularRobotSingleThread.cpp  SimulatedModularRobotSingleThread.h  SimulationOpenRAVE.cpp  SimulationOpenRAVE.h
src/utils/: IDcalculator.py  vectorToTable.m
tests/: CMakeLists.txt  testConfigParser.cpp  testConnectionsFromConfigParser.cpp  testGaitTable.cpp  testModularRobot.cpp  testModule.cpp  testMovement.cpp  testMovementWithGaitTable.cpp  testOrientation.cpp  testRobotInterface.cpp  testSerialCommSinusoidal.cpp  testSerialModularRobot.cpp  testSerialModularRobotInterface.cpp  testSimModularRobot.cpp  testSimModularRobotSingleThread.cpp  testSinusoidalOscillator.cpp
(+303 files in other folders)
