add_subdirectory(ConfigParser)
add_subdirectory(SimulationOpenRAVE)
add_subdirectory(Oscillator)
add_subdirectory(ModularRobotInterface)
add_subdirectory(GaitTable)
add_subdirectory(Module)
add_subdirectory(Hormone)
add_subdirectory(ModularRobot)
add_subdirectory(Orientation)
add_subdirectory(Utils)
